# nori

./: .gitignore  LICENSE  package-lock.json  package.json  settings.json  tsconfig.json
rust-workers/: Cargo.toml  package.json
rust-workers/src/: captcha.rs  card_handler.rs  drop.rs  engine2.rs  lib.rs  main.rs  series_handler.rs  series_ocr.rs
src/: dropAnalysis.ts  drop_analysis.ts  index.ts  rustlang-bridge.d.ts
src/commands/: eval.ts
src/config/: configTypes.ts  serverConfig.ts  userConfig.ts
src/config/parts/: analysis.ts  handler.ts  reminders.ts  utils.ts
src/database/: handler.ts
src/editOperations/: collectWl.ts  glowIndicators.ts
src/interactions/commands/: eval.ts  help.ts
src/interactions/contextMenus/: deleteMessage.ts
src/operations/: captchaDrop.ts  captcha_drop.ts  collectWl.ts  glowIndicators.ts  grabReminder.ts  minigame.ts  raidReminder.ts  seriesOne.ts  seriesTwo.ts  series_one.ts
src/utils/: Constants.ts  bridge.ts  constants.ts  databaseHandler.ts  database_handler.ts  eventHandler.ts  event_handler.ts  index.ts  reminderHandler.ts  reminder_handler.ts
