[package]
name = "rust-workers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rayon = "1.7"
leptess = "0.14.0"
image = "0.24.6"
reqwest = "0.11.16"
mongodb = "2.5.0"
serde = "1.0.152"
serde_json = "1.0.96"
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
